# ArgoLocks

./: .gitignore  Dockerfile  pyproject.toml
argolocks/: config.py  main.py  models.py  slack_client.py  store.py
argolocks/routes/: health.py  locks.py  slack.py
k8s/: argocd-app.yaml  deployment.yaml  presync-hook.yaml
k8s/sample-app/: configmap.yaml  presync-hook.yaml
sample-app/: Dockerfile  main.py
scripts/: setup-local.sh
